Fixing grid gap on footer

--- a/src/styles.css
+++ b/src/styles.css
@@ -11,6 +11,7 @@ body {
 .grid {
   display: grid;
   grid-template-columns: 1fr 2fr 2fr;
+  grid-gap: 64px;
 }
 
 section {
@@ -91,7 +92,6 @@ footer p {
   font-size: 16px;
   line-height: 1.5;
   opacity: 0.6;
-  margin-right: 20px;
 }
 
 footer ul {
